--- a/latex-review-platform/package.json
+++ b/latex-review-platform/package.json
@@ -9,25 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.7.4",
     "@prisma/client": "^6.3.1",
     "@types/katex": "^0.16.7",
     "@uiw/react-md-editor": "^4.0.5",
     "katex": "^0.16.21",
     "next": "15.1.7",
     "next-auth": "^4.24.11",
+    "prisma": "^6.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-latex-next": "^3.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
+    "@types/node": "^20.17.19",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.3"
   }
 }
