add EN guide submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "latex-review-platform/src/app/xp_pgrs_unofficial_guide"]
 	path = latex-review-platform/src/app/xp_pgrs_unofficial_guide
 	url = https://github.com/xp-pgrs-unofficial-guide/xp_pgrs_unofficial_guide.git
+[submodule "latex-review-platform/src/app/xp_pgrs_unofficial_guide_EN"]
+	path = latex-review-platform/src/app/xp_pgrs_unofficial_guide_EN
+	url = https://github.com/xp-pgrs-unofficial-guide/xp_pgrs_unofficial_guide_EN.git
