--- a/latex-review-platform/package.json
+++ b/latex-review-platform/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.4",
     "@prisma/client": "^6.3.1",
+    "@types/bcryptjs": "^2.4.6",
     "@types/katex": "^0.16.7",
     "@uiw/react-md-editor": "^4.0.5",
+    "bcryptjs": "^3.0.0",
     "katex": "^0.16.21",
     "next": "15.1.7",
     "next-auth": "^4.24.11",
