docker compose for the project

--- a/latex-review-platform/docker-compose.yml
+++ b/latex-review-platform/docker-compose.yml
@@ -1,5 +1,19 @@
-version: '3.8'
 services:
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "3000:3000"
+    environment:
+      - DATABASE_URL=postgresql://username:password@postgres:5432/guide_review_db
+      - NEXTAUTH_SECRET=${NEXTAUTH_SECRET}
+      - NEXT_PUBLIC_BASE_URL=http://app:3000
+      - HOSTNAME=0.0.0.0
+      - PORT=3000
+    depends_on:
+      - postgres
+
   postgres:
     image: postgres:16
     container_name: guide_review_db
@@ -7,10 +21,10 @@ services:
       POSTGRES_USER: username
       POSTGRES_PASSWORD: password
       POSTGRES_DB: guide_review_db
-    ports:
-      - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
 
 volumes:
   postgres_data:
