--- a/latex-review-platform/package.json
+++ b/latex-review-platform/package.json
@@ -14,25 +14,26 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/katex": "^0.16.7",
     "@uiw/react-md-editor": "^4.0.5",
+    "@eslint/eslintrc": "^3",
+    "@types/node": "^20.17.19",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "bcryptjs": "^3.0.0",
     "katex": "^0.16.21",
     "next": "15.1.7",
     "next-auth": "^4.24.11",
     "prisma": "^6.3.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-latex-next": "^3.0.0"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@types/node": "^20.17.19",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-latex-next": "^3.0.0",
+    "tailwindcss": "^3.4.1",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
+  },
+  "devDependencies": {
+ 
   }
 }
